force-app/main/default/objects/Dev_DLI_Service_Delivery__c/Dev_DLI_Service_Delivery__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing: Captures details of all service deliveries offered by the Deep Learning Institute. Currently, this only applies to Instructor-Led and Instructor-Led Remote courses. Data for DLI Service Deliveries is procured, primarily, from the DMS database.</description>
    <label>Dev DLI Service Delivery</label>
    <nameField>
        <displayFormat>Dev-DLISD-{0000000}</displayFormat>
        <label>Dev DLI Service Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev DLI Service Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>