force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Customer_Organization__c.field-meta.xml
<CustomField>
    <fullName>Customer_Organization__c</fullName>
    <label>Customer Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>