force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Code__c</fullName>
    <label>Delivery Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>