force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ID__c</fullName>
    <description>Captures the unique identifier of a service delivery offered by the Deep Learning Institute (DLI)</description>
    <externalId>true</externalId>
    <label>Delivery ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>