force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <description>Captures the country/location where the service was delivered.</description>
    <label>Delivery Location</label>
    <length>64</length>
    <type>Text</type>
</CustomField>