force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <label>Delivery Owner</label>
    <length>64</length>
    <type>Text</type>
</CustomField>