force-app/main/default/objects/Dev_DLI_Service_Delivery__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>